implement main window menu navigation (closes #75)

--- a/packages/heroes-homm1-react-app/src/index.html
+++ b/packages/heroes-homm1-react-app/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <base href="/">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>heroes-homm1-react</title>
   <meta name="description" content="">
